Overflow fixed

--- a/src/global/Header/Header.css
+++ b/src/global/Header/Header.css
@@ -11,12 +11,6 @@
 }
 
 /* Navbar  */
-.omni-nav-menu {
-  position: sticky;
-  top: 0;
-  overflow: hidden;
-}
-
 .logo-area img {
   height: 80px;
 }
